<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="google_maps_key">AIzaSyB_B5bMQa_-5fgiiLoq2pfcLvrF6NwRXhY</string>
    <string name="add_new_run">Add a new run</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_name">Your Name</string>
    <string name="continue_on">Continue</string>
    <string name="welcome_please_enter_your_name_and_weight">Welcome!\nPlease enter your name and weight</string>
    <string name="start">Start</string>
    <string name="run_image">Run Image</string>
    <string name="date">Date</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="speed">Speed</string>
    <string name="calories">Calories</string>
    <string name="total_time">Total Time</string>
    <string name="average_speed">Average Speed</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="total_distance">Total Distance</string>
    <string name="your_runs">Your Runs</string>
    <string name="statistics">Statistics</string>
    <string name="setting_up">Setting up</string>
    <string name="settings">Settings</string>
    <string name="tracking_your_run">Tracking your run</string>
    <string name="delete_all_runs">Delete all runs</string>
    <string name="sort">Sort</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_run_duration">Sort by run duration</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="sort_by_speed">Sort by speed</string>
    <string name="sort_by_calories_burned">Sort by calories burned</string>
    <string name="user">User</string>
    <string name="error_sort_doesnt_exist">Error! This kind of sorting does not exist</string>
    <string name="error_statistic_type_doesnt_exist">Error! This statistics type does not exist</string>
    <string name="error_required_field">Required field</string>
    <string name="error_name_must_be_longer">The name must be longer</string>
    <string name="finish_run">Finish Run</string>
    <string name="fitness_tracker">Fitness Tracker</string>
    <string name="zeros">00:00:00</string>
    <string name="zeros_with_millis">00:00:00:00</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="cancel_run_message">Are you sure you want to cancel the current run and delete all its data?</string>
    <string name="cancel_run_title">Cancel the Run?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="run_was_saved">Run was successfully saved</string>
    <string name="dismiss">Dismiss</string>
    <string name="welcome_user">Welcome, %s</string>
    <string name="distance_km">%.1fkm</string>
    <string name="speed_km_h">%.1fkm/h</string>
    <string name="bar_chart_label">Average %s Over Time</string>
    <string name="show_statistics_about">Show statistics about:</string>
    <string name="change_chart_value_type">Change the chart value type</string>
    <string name="update_the_user_info">Update user information</string>
    <string name="update_user">Update User</string>
    <string name="setting_up_statistics">Setting up Statistics</string>
    <string name="error_gps_unavailable">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="error_gps_disabled">Gps is disabled. Please, enable it and try again!</string>
    <string name="rationale_title">Gps is required for this application.</string>
    <string name="rationale_message">
        This app may not work correctly without the Gps.
        Open the app settings screen to enable it.
    </string>
    <string name="title_location_permission_required">Location Permission Required</string>
    <string name="message_location_permission_required">The app may not work correctly without the location permission. Move to the app settings and allow to use location permission \"Always\".</string>
</resources>