<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always|collapseActionView">

        <menu>
            <group
                android:id="@+id/group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_date"
                    android:title="@string/sort_by_date" />
                <item
                    android:id="@+id/action_sort_by_duration"
                    android:title="@string/sort_by_run_duration" />
                <item
                    android:id="@+id/action_sort_by_distance"
                    android:title="@string/sort_by_distance" />
                <item
                    android:id="@+id/action_sort_by_avg_speed"
                    android:title="@string/sort_by_speed" />
                <item
                    android:id="@+id/action_sort_by_calories_burned"
                    android:title="@string/sort_by_calories_burned" />
            </group>
        </menu>

    </item>

    <item
        android:id="@+id/action_delete_all_completed_tasks"
        android:title="@string/delete_all_runs"
        app:showAsAction="never" />

</menu>