<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.SetupStatisticsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvShowStatistics"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/show_statistics_about"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbSpeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/speed" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbDuration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/duration" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbDistance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/distance" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbCalories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/calories" />
    </RadioGroup>

</androidx.appcompat.widget.LinearLayoutCompat>