<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="run"
            type="com.example.fitnesstracker.data.models.RunEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivRunImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/run_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="@+id/tvDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/tvDate"
            app:layout_constraintTop_toBottomOf="@+id/ivRunImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@id/dateToDuration"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateLabel"
            tools:text="24.03.2022" />

        <View
            android:id="@+id/dateToDuration"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/tvAvgSpeed"
            app:layout_constraintEnd_toStartOf="@id/tvTime"
            app:layout_constraintStart_toEndOf="@id/tvDate"
            app:layout_constraintTop_toTopOf="@id/tvDateLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:text="@string/duration"
            app:layout_constraintEnd_toStartOf="@+id/timeToDistance"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dateToDuration"
            app:layout_constraintTop_toBottomOf="@+id/ivRunImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/timeToDistance"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dateToDuration"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeLabel"
            tools:text="00:24:54" />

        <View
            android:id="@+id/timeToDistance"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/tvAvgSpeed"
            app:layout_constraintEnd_toStartOf="@id/tvDistance"
            app:layout_constraintStart_toEndOf="@id/tvTime"
            app:layout_constraintTop_toTopOf="@id/tvTimeLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/distance"
            app:layout_constraintEnd_toEndOf="@+id/tvDistance"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tvDistance"
            app:layout_constraintTop_toBottomOf="@+id/ivRunImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:text="@{run.distanceInMeters + ` Km`}"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/distanceToSpeed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/timeToDistance"
            app:layout_constraintTop_toBottomOf="@+id/tvDistanceLabel"
            tools:text="24 Km" />

        <View
            android:id="@+id/distanceToSpeed"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/tvAvgSpeed"
            app:layout_constraintEnd_toStartOf="@id/tvAvgSpeed"
            app:layout_constraintStart_toEndOf="@id/tvDistance"
            app:layout_constraintTop_toTopOf="@id/tvTimeLabel"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAvgSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/speed"
            app:layout_constraintEnd_toEndOf="@+id/tvAvgSpeed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tvAvgSpeed"
            app:layout_constraintTop_toBottomOf="@+id/ivRunImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAvgSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:text="@{run.avgSpeedInKMH + ` Km/H`}"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/speedToCalories"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/distanceToSpeed"
            app:layout_constraintTop_toBottomOf="@+id/tvAvgSpeedLabel"
            tools:text="24.5 Km/H" />

        <View
            android:id="@+id/speedToCalories"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/tvAvgSpeed"
            app:layout_constraintEnd_toStartOf="@id/tvCalories"
            app:layout_constraintStart_toEndOf="@id/tvAvgSpeed"
            app:layout_constraintTop_toTopOf="@id/tvTimeLabel"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCaloriesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calories"
            app:layout_constraintEnd_toEndOf="@id/tvCalories"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tvCalories"
            app:layout_constraintTop_toBottomOf="@+id/ivRunImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCalories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@{run.caloriesBurned}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/speedToCalories"
            app:layout_constraintTop_toBottomOf="@+id/tvCaloriesLabel"
            tools:text="443" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>